syntax = "proto3";

package user;

service UserService {
    rpc GetUser (UserRequest) returns (User) {};
    rpc GetUsers (UsersRequest) returns (UsersResponse) {};
    rpc CreateUser (UserCreate) returns (User) {}
    rpc UpdateUser (UserUpdate) returns (User) {}
    rpc DeleteUser (UserDelete) returns (User) {}
}

message User {
    int32 id = 1;
    string name = 2;
    string surname = 3;
    string user_name = 4;
    string birth_date = 5;
    string gender = 6;
    bool is_premium = 7;
    string email = 8;
    string password = 9;
    string created_at = 10;
    string updated_at = 11;
    string deleted_at = 12;
}

message UserRequest {
    int32 id = 1;
}

message UsersRequest {}

message UsersResponse {
    repeated User users = 1;
}

message UserCreate {
    string name = 2;
    string surname = 3;
    string user_name = 4;
    string birth_date = 5;
    string gender = 6;
    bool is_premium = 7;
    string email = 8;
    string password = 9;
}

message UserUpdate {
    int32 id = 1;
    optional string name = 2;
    optional string surname = 3;
    optional string user_name = 4;
    optional string birth_date = 5;
    optional string gender = 6;
    optional bool is_premium = 7;
    optional string email = 8;
    optional string password = 9;
}

message UserDelete {
    int32 id = 1;
}